Crear la clase TurismoTest

--- a/Practica4/ImpuestoCirculacionGUI/pom.xml
+++ b/Practica4/ImpuestoCirculacionGUI/pom.xml
@@ -9,7 +9,12 @@
     	<groupId>es.unican.is2</groupId>
     	<artifactId>ImpuestoCirculacionCommon</artifactId> 
     	<version>0.0.1-SNAPSHOT</version>
+	 </dependency>
+	 
+	 <dependency>
+			<groupId>junit</groupId>
+	    	<artifactId>junit</artifactId> 
+	    	<version>4.13.2</version>
 	</dependency>
-  </dependencies>
-  
+   </dependencies>
 </project>
