--- a/Practica4/ImpuestoCirculacionGUI/pom.xml
+++ b/Practica4/ImpuestoCirculacionGUI/pom.xml
@@ -1,20 +1,63 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>es.unican.is2</groupId>
-  <artifactId>ImpuestoCirculacionGUI</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <dependencies>
-	 <dependency>
-    	<groupId>es.unican.is2</groupId>
-    	<artifactId>ImpuestoCirculacionCommon</artifactId> 
-    	<version>0.0.1-SNAPSHOT</version>
-	 </dependency>
-	 
-	 <dependency>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>es.unican.is2</groupId>
+	<artifactId>ImpuestoCirculacionGUI</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>es.unican.is2</groupId>
+			<artifactId>ImpuestoCirculacionCommon</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
-	    	<artifactId>junit</artifactId> 
-	    	<version>4.13.2</version>
-	</dependency>
-   </dependencies>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-swing</artifactId>
+			<version>3.9.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>es.unican.is2</groupId>
+			<artifactId>ImpuestoCirculacionBusiness</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.9.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>es.unican.is2</groupId>
+			<artifactId>ImpuestoCirculacionDAOH2</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
